@@ -1,5 +1,10 @@
 2013-07-09  Alan D. Salewski  <salewski@att.net>
 
+	* src/main/bash/bin/screen-ls.in
+	- replace (debugging) 'screen -q -ls' invocations with 'screen -ls'
+	- correct detection of 'screen -ls' exit status (in $PIPESTATUS)
+	- update docs
+
 	* configure.ac: set version to 0.1.1-snapshot for next dev cycle
 	* NEWS: created empty new section for future 0.1.1 release
 
